--- a/Modification_of_Diabetes_prediction_Classifier.ipynb
+++ b/Modification_of_Diabetes_prediction_Classifier.ipynb
@@ -40113,7 +40113,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Video Reference Link"
+        "# Video Reference Link:\n",
+        "https://drive.google.com/file/d/1RiGYvkyHp6XnwELO70vozlEwe7i7LJbw/view?usp=drive_link"
       ],
       "metadata": {
         "id": "pc7qWWLekyIb"
